tests/baselines/reference/jsFileCompilationTypeArgumentSyntaxOfCall.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,5): error TS8011: 'type arguments' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (1 errors) ====
    Foo<number>();
        ~~~~~~
!!! error TS8011: 'type arguments' can only be used in a .ts file.